# nix-tools

./: flake.nix
alectryon/: default.nix
apalache/: default.nix
ebmc/: default.nix
genmc/: genmc-unwrapped.nix  genmc.nix
ghc-wasm-template/: .gitignore  Makefile  flake.nix  ghc-wasm-miso-examples.cabal
ghc-wasm-template/app/: Main.hs
ghc-wasm-template/frontend/: build.sh  index.html
kani/: default.nix
llvm-pass-template/example/: example.c
neovim/: default.nix  init.lua
neovim/after/ftplugin/: pug.vim  stylus.vim
neovim/after/syntax/: lhaskell.vim  mail.vim  tex.vim  vim.vim
neovim/ftplugin/: coq.vim  css.vim  guile.vim  haskell.vim  html.vim  javascript.vim  lean.lua  lean.vim  lua.vim  mail.vim  mediawiki.vim  pandoc.vim  pug.vim  racket.vim  rust.vim  scheme.vim  sh.vim  tex.vim  text.vim  tla.lua  yaml.vim
neovim/plugin/: bg.lua  cmp.lua  codecompanion.lua  lean.lua  lightbulb.lua  lsp.lua  luasnip.lua  mpage.vim  nvim-web-devicons.lua  obsession.lua  oil.lua  quarto.lua  telescope.lua  treesitter.lua  undotree.lua  vim-pandoc.lua  vim-pandoc.vim  which-key.lua  which.vim  zen-mode.lua
neovim/spell/: en.utf-8.add  en.utf-8.add.spl
quint/: default.nix
quint-lsp/: default.nix  package-lock.json  package.json
souffle/: includes.patch
templates/ghc-wasm/: cabal.project  flake.nix
templates/llvm-pass/: .gitignore  README.md  flake.nix
templates/quint/: bank.qnt  flake.nix
templates/tlaPlus/: loop.cfg  loop.tla
tlaPlus-template/: .gitignore  flake.nix  text.tla
vampire/: default.nix
vitejs/: default.nix
(+3 files in other folders)
