cabal-version:   3.0
name:            ghc-wasm-miso-examples
version:         0

executable ghc-wasm-miso-examples
    main-is: Main.hs
    build-depends:
      , aeson
      , base
      , containers
      , ghc-experimental
      , jsaddle
      , miso
      , mtl
      , random
      , text
      , lens
    if arch(wasm32)
        build-depends: jsaddle-wasm
    hs-source-dirs: app
    default-language: GHC2021
    default-extensions: BlockArguments LambdaCase LexicalNegation OverloadedStrings RecordWildCards
    ghc-options: -Wall -Wunused-packages -Wno-name-shadowing -Wredundant-constraints
    ghc-options: -no-hs-main -optl-mexec-model=reactor "-optl-Wl,--export=hs_start"
